--- a/src/site/asciidoc/config.adoc
+++ b/src/site/asciidoc/config.adoc
@@ -84,189 +84,82 @@ WSS4J 1.6.x ships with a default "SAMLIssuerImpl" implementation. It is
 possible to instantiate a SAMLIssuer implementation directly, but it can also
 be loaded via a properties file. The property values are as follows:
 
-<table name="SAMLIssuer properties">
-<tr>
-<th>Property name</th>
-<th>Property value</th>
-</tr>
-<tr>
-<td>org.apache.ws.security.saml.issuerClass</td>
-<td>The SAML Issuer implementation (defaults to "org.apache.ws.security.saml.SAMLIssuerImpl").</td>
-</tr>
-<tr>
-<td>org.apache.ws.security.saml.issuer.cryptoProp.file</td>
-<td>The crypto properties file corresponding to the issuer crypto instance, if the assertion is to
-be signed.</td>
-</tr>
-<tr>
-<td>org.apache.ws.security.saml.issuer.key.name</td>
-<td>The KeyStore alias for the issuer key.</td>
-</tr>
-<tr>
-<td>org.apache.ws.security.saml.issuer.key.password</td>
-<td>The KeyStore password for the issuer key.</td>
-</tr>
-<tr>
-<td>org.apache.ws.security.saml.issuer</td>
-<td>The issuer name</td>
-</tr>
-<tr>
-<td>org.apache.ws.security.saml.issuer.sendKeyValue</td>
-<td>Whether to send the key value or the X509Certificate. Default is "false".</td>
-</tr>
-<tr>
-<td>org.apache.ws.security.saml.issuer.signAssertion</td>
-<td>Whether the SAMLIssuer implementation will sign the assertion or not. Defaults is 
-"false".</td>
-</tr>
-<tr>
-<td>org.apache.ws.security.saml.callback</td>
-<td>The name of the SAML CallbackHandler implementation used to populate the SAML Assertion.</td>
-</tr>
-</table>
-</subsection>
-<subsection name="Configuration tags">
-<p>
+==== SAMLIssuer properties
+
+ * org.apache.ws.security.saml.issuerClass - The SAML Issuer implementation (defaults to "org.apache.ws.security.saml.SAMLIssuerImpl").
+ * org.apache.ws.security.saml.issuer.cryptoProp.file - The crypto properties file corresponding to the issuer crypto instance, if the assertion is to
+be signed.
+ * org.apache.ws.security.saml.issuer.key.name - The KeyStore alias for the issuer key.
+ * org.apache.ws.security.saml.issuer.key.password - The KeyStore password for the issuer key.
+ * org.apache.ws.security.saml.issuer - The issuer name
+ * org.apache.ws.security.saml.issuer.sendKeyValue - Whether to send the key value or the X509Certificate. Default is "false".
+ * org.apache.ws.security.saml.issuer.signAssertion - Whether the SAMLIssuer implementation will sign the assertion or not. Default is 
+"false".
+ * org.apache.ws.security.saml.callback - The name of the SAML CallbackHandler implementation used to populate the SAML Assertion.
+
+=== Configuration tags
+
 Apache WSS4J provides a set of configuration tags that can be used to configure
 both the DOM-based and StAX-based (WSS4J 2.0.0 onwards) outbound and inbound
 processing. As both DOM and StAX code are very similar, both approaches share
-a set of common configuration tags given in <a href="http://svn.apache.org/viewvc/webservices/wss4j/trunk/ws-security-common/src/main/java/org/apache/wss4j/common/ConfigurationConstants.java?view=markup">ConfigurationConstants</a>. Note
+a set of common configuration tags given in http://svn.apache.org/viewvc/webservices/wss4j/trunk/ws-security-common/src/main/java/org/apache/wss4j/common/ConfigurationConstants.java?view=markup[ConfigurationConstants]. Note
 that the WSS4J 1.6.x configuration class (WSHandlerConstants) extends this
 class in WSS4J 2.0.0, so there is no need to change any configuration code
 when upgrading.
-</p>
-<p>
+
 The configuration tags for Actions are as follows:
-</p>
-<table name="Action configuration tags">
-<tr>
-<th>Tag name</th>
-<th>Tag value</th>
-<th>Tag meaning</th>
-</tr>
-<tr>
-<td>ACTION</td>
-<td>action</td>
-<td>The action to perform, e.g. ConfigurationConstants.TIMESTAMP</td>
-</tr>
-<tr>
-<td>NO_SECURITY</td>
-<td>NoSecurity</td>
-<td>Do not perform any action, do nothing. Only applies to DOM code.</td>
-</tr>
-<tr>
-<td><b>WSS4J 2.0.0</b> USERNAME_TOKEN_SIGNATURE</td>
-<td>UsernameTokenSignature</td>
-<td>Perform a UsernameTokenSignature action.</td>
-</tr>
-<tr>
-<td>USERNAME_TOKEN</td>
-<td>UsernameToken</td>
-<td>Perform a UsernameToken action.</td>
-</tr>
-<tr>
-<td>USERNAME_TOKEN_NO_PASSWORD</td>
-<td>UsernameTokenNoPassword</td>
-<td>Used on the receiving side to specify a UsernameToken with no password</td>
-</tr>
-<tr>
-<td>SAML_TOKEN_UNSIGNED</td>
-<td>SAMLTokenUnsigned</td>
-<td>Perform an unsigned SAML Token action.</td>
-</tr>
-<tr>
-<td>SAML_TOKEN_SIGNED</td>
-<td>SAMLTokenSigned</td>
-<td>Perform a signed SAML Token action.</td>
-</tr>
-<tr>
-<td>SIGNATURE</td>
-<td>Signature</td>
-<td>Perform a signature action.</td>
-</tr>
-<tr>
-<td>ENCRYPT</td>
-<td>Encrypt</td>
-<td>Perform an encryption action.</td>
-</tr>
-<tr>
-<td>TIMESTAMP</td>
-<td>Timestamp</td>
-<td>Perform a Timestamp action.</td>
-</tr>
-<tr>
-<td><b>WSS4J 2.0.0</b> SIGNATURE_DERIVED</td>
-<td>SignatureDerived</td>
-<td>Perform a Signature action with derived keys.</td>
-</tr>
-<tr>
-<td><b>WSS4J 2.0.0</b> ENCRYPT_DERIVED</td>
-<td>EncryptDerived</td>
-<td>Perform a Encryption action with derived keys.</td>
-</tr>
-<tr>
-<td><b>WSS4J 2.0.0</b> SIGNATURE_WITH_KERBEROS_TOKEN</td>
-<td>SignatureWithKerberosToken</td>
-<td>Perform a Signature action with a kerberos token. Only for StAX code.</td>
-</tr>
-<tr>
-<td><b>WSS4J 2.0.0</b> ENCRYPT_WITH_KERBEROS_TOKEN</td>
-<td>EncryptWithKerberosToken</td>
-<td>Perform a Encryption action with a kerberos token. Only for StAX code.</td>
-</tr>
-<tr>
-<td><b>WSS4J 2.0.0</b> KERBEROS_TOKEN</td>
-<td>KerberosToken</td>
-<td>Add a kerberos token.</td>
-</tr>
-<tr>
-<td><b>WSS4J 2.0.0</b> CUSTOM_TOKEN</td>
-<td>CustomToken</td>
-<td>Add a "Custom" token from a CallbackHandler</td>
-</tr>
-<tr>
-<td><b>WSS4J 1.6.x only</b> SIGN_WITH_UT_KEY</td>
-<td>UsernameTokenSignature</td>
-<td>Perform a .NET specific signature using a Username Token action.</td>
-</tr>
-</table>
-<p>
+
+==== Action configuration tags
+
+ * ACTION (action) - The action to perform, e.g. ConfigurationConstants.TIMESTAMP
+ * NO_SECURITY (NoSecurity) - Do not perform any action, do nothing. Only applies to DOM code.
+ * *WSS4J 2.0.0* USERNAME_TOKEN_SIGNATURE (UsernameTokenSignature) - Perform a UsernameTokenSignature action.
+ * USERNAME_TOKEN (UsernameToken) - Perform a UsernameToken action.
+ * USERNAME_TOKEN_NO_PASSWORD (UsernameTokenNoPassword) - Used on the receiving side to specify a UsernameToken with no password
+ * SAML_TOKEN_UNSIGNED (SAMLTokenUnsigned) - Perform an unsigned SAML Token action.
+ * SAML_TOKEN_SIGNED (SAMLTokenSigned) - Perform a signed SAML Token action.
+ * SIGNATURE (Signature) - Perform a signature action.
+ * ENCRYPT (Encrypt) - Perform an encryption action.
+ * TIMESTAMP (Timestamp) - Perform a Timestamp action.
+ * *WSS4J 2.0.0* SIGNATURE_DERIVED (SignatureDerived) - Perform a Signature action with derived keys.
+ * *WSS4J 2.0.0* ENCRYPT_DERIVED (EncryptDerived) - Perform a Encryption action with derived keys.
+ * *WSS4J 2.0.0* SIGNATURE_WITH_KERBEROS_TOKEN (SignatureWithKerberosToken) - Perform a Signature action with a kerberos token. Only for StAX code.
+ * *WSS4J 2.0.0* ENCRYPT_WITH_KERBEROS_TOKEN (EncryptWithKerberosToken) - Perform a Encryption action with a kerberos token. Only for StAX code.
+ * *WSS4J 2.0.0* KERBEROS_TOKEN (KerberosToken) - Add a kerberos token.
+ * *WSS4J 2.0.0* CUSTOM_TOKEN (CustomToken) - Add a "Custom" token from a CallbackHandler
+ * *WSS4J 1.6.x only* SIGN_WITH_UT_KEY (UsernameTokenSignature) - Perform a .NET specific signature using a Username Token action.
+
+==== WSHandler User configuration tags
+
 The configuration tags for WSHandler user properties are as follows:
-</p>
-<table name="WSHandler User configuration tags">
-<tr>
-<th>Tag name</th>
-<th>Tag value</th>
-<th>Tag meaning</th>
+
+ * ACTOR
+ * "actor"
+ * The actor or role name of the wsse:Security header.
 </tr>
 <tr>
-<td>ACTOR</td>
-<td>"actor"</td>
-<td>The actor or role name of the wsse:Security header.</td>
+ * USER
+ * "user"
+ * The user's name. Consult the Javadoc for an explanation of this property.
+
 </tr>
 <tr>
-<td>USER</td>
-<td>"user"</td>
-<td>The user's name. Consult the Javadoc for an explanation of this property.
-</td>
+ * ENCRYPTION_USER
+ * "encryptionUser"
+ * The user's name for encryption. Consult the Javadoc for an explanation of
+this property.
 </tr>
 <tr>
-<td>ENCRYPTION_USER</td>
-<td>"encryptionUser"</td>
-<td>The user's name for encryption. Consult the Javadoc for an explanation of
-this property.</td>
+ * SIGNATURE_USER
+ * "signatureUser"
+ * The user's name for signature. Consult the Javadoc for an explanation of
+this property.
 </tr>
 <tr>
-<td>SIGNATURE_USER</td>
-<td>"signatureUser"</td>
-<td>The user's name for signature. Consult the Javadoc for an explanation of
-this property.</td>
-</tr>
-<tr>
-<td>USE_REQ_SIG_CERT</td>
-<td>"useReqSigCert"</td>
-<td>A special value for ENCRYPTION_USER. Consult the Javadoc for an
-explanation of this property.</td>
+ * USE_REQ_SIG_CERT
+ * "useReqSigCert"
+ * A special value for ENCRYPTION_USER. Consult the Javadoc for an
+explanation of this property.
 </tr>
 </table>
 <p>
@@ -280,88 +173,88 @@ summarised here:
 <th>Tag meaning</th>
 </tr>
 <tr>
-<td>PW_CALLBACK_CLASS</td>
-<td>passwordCallbackClass</td>
-<td>The CallbackHandler implementation class used to obtain passwords.</td>
+ * PW_CALLBACK_CLASS
+ * passwordCallbackClass
+ * The CallbackHandler implementation class used to obtain passwords.
 </tr>
 <tr>
-<td>PW_CALLBACK_REF</td>
-<td>passwordCallbackRef</td>
-<td>The CallbackHandler implementation object used to obtain passwords.</td>
+ * PW_CALLBACK_REF
+ * passwordCallbackRef
+ * The CallbackHandler implementation object used to obtain passwords.
 </tr>
 <tr>
-<td>SAML_CALLBACK_CLASS</td>
-<td>samlCallbackClass</td>
-<td>The CallbackHandler implementation class used to construct SAML Assertions.
-</td>
+ * SAML_CALLBACK_CLASS
+ * samlCallbackClass
+ * The CallbackHandler implementation class used to construct SAML Assertions.
+
 </tr>
 <tr>
-<td>SAML_CALLBACK_REF</td>
-<td>samlCallbackRef</td>
-<td>The CallbackHandler implementation object used to construct SAML Assertions.</td>
+ * SAML_CALLBACK_REF
+ * samlCallbackRef
+ * The CallbackHandler implementation object used to construct SAML Assertions.
 </tr>
 <tr>
-<td><b>WSS4J 1.6.x only</b> ENC_CALLBACK_CLASS</td>
-<td>embeddedKeyCallbackClass</td>
-<td>The CallbackHandler implementation class used to get the key associated
-with a key name.</td>
+ * <b>WSS4J 1.6.x only</b> ENC_CALLBACK_CLASS
+ * embeddedKeyCallbackClass
+ * The CallbackHandler implementation class used to get the key associated
+with a key name.
 </tr>
 <tr>
-<td><b>WSS4J 1.6.x only</b> ENC_CALLBACK_REF</td>
-<td>embeddedKeyCallbackRef</td>
-<td>The CallbackHandler implementation object used to get the key associated
-with a key name.</td>
+ * <b>WSS4J 1.6.x only</b> ENC_CALLBACK_REF
+ * embeddedKeyCallbackRef
+ * The CallbackHandler implementation object used to get the key associated
+with a key name.
 </tr>
 <tr>
-<td>SIG_PROP_FILE</td>
-<td>signaturePropFile</td>
-<td>The path of the crypto property file to use for Signature.</td>
+ * SIG_PROP_FILE
+ * signaturePropFile
+ * The path of the crypto property file to use for Signature.
 </tr>
 <tr>
-<td>SIG_PROP_REF_ID</td>
-<td>signaturePropRefId</td>
-<td>The String ID that is used to store a reference to the Crypto object or
+ * SIG_PROP_REF_ID
+ * signaturePropRefId
+ * The String ID that is used to store a reference to the Crypto object or
 the Crypto Properties object for Signature.
-</td>
+
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> SIG_VER_PROP_FILE</td>
-<td>signatureVerificationPropFile</td>
-<td>The path of the crypto property file to use for Signature verification.</td>
+ * <b>WSS4J 2.0.0</b> SIG_VER_PROP_FILE
+ * signatureVerificationPropFile
+ * The path of the crypto property file to use for Signature verification.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> SIG_VER_PROP_REF_ID</td>
-<td>signatureVerificationPropRefId</td>
-<td>The String ID that is used to store a reference to the Crypto object or
+ * <b>WSS4J 2.0.0</b> SIG_VER_PROP_REF_ID
+ * signatureVerificationPropRefId
+ * The String ID that is used to store a reference to the Crypto object or
 the Crypto Properties object for Signature verification.
-</td>
+
 </tr>
 <tr>
-<td>DEC_PROP_FILE</td>
-<td>decryptionPropFile</td>
-<td>The path of the crypto property file to use for Decryption.</td>
+ * DEC_PROP_FILE
+ * decryptionPropFile
+ * The path of the crypto property file to use for Decryption.
 </tr>
 <tr>
-<td>DEC_PROP_REF_ID</td>
-<td>decryptionPropRefId</td>
-<td>The String ID that is used to store a reference to the Crypto object or
-the Crypto Properties object for decryption.</td>
+ * DEC_PROP_REF_ID
+ * decryptionPropRefId
+ * The String ID that is used to store a reference to the Crypto object or
+the Crypto Properties object for decryption.
 </tr>
 <tr>
-<td>ENC_PROP_FILE</td>
-<td>encryptionPropFile</td>
-<td>The path of the crypto property file to use for encryption.</td>
+ * ENC_PROP_FILE
+ * encryptionPropFile
+ * The path of the crypto property file to use for encryption.
 </tr>
 <tr>
-<td>ENC_PROP_REF_ID</td>
-<td>encryptionPropRefId</td>
-<td>The String ID that is used to store a reference to the Crypto object or
-the Crypto Properties object for encryption.</td>
+ * ENC_PROP_REF_ID
+ * encryptionPropRefId
+ * The String ID that is used to store a reference to the Crypto object or
+the Crypto Properties object for encryption.
 </tr>
 <tr>
-<td>SAML_PROP_FILE</td>
-<td>samlPropFile</td>
-<td>The path of the property file to use for creating SAML Assertions.</td>
+ * SAML_PROP_FILE
+ * samlPropFile
+ * The path of the property file to use for creating SAML Assertions.
 </tr>
 </table>
 <p>
@@ -375,193 +268,193 @@ parameter (i.e. "true" or "false") are as follows:
 <th>Tag meaning</th>
 </tr>
 <tr>
-<td>ENABLE_SIGNATURE_CONFIRMATION</td>
-<td>enableSignatureConfirmation</td>
-<td>Whether to enable signature confirmation or not. Default is "false".</td>
+ * ENABLE_SIGNATURE_CONFIRMATION
+ * enableSignatureConfirmation
+ * Whether to enable signature confirmation or not. Default is "false".
 </tr>
 <tr>
-<td>MUST_UNDERSTAND</td>
-<td>mustUnderstand</td>
-<td>Set the outbound MustUnderstand flag or not. Default is "true".</td>
+ * MUST_UNDERSTAND
+ * mustUnderstand
+ * Set the outbound MustUnderstand flag or not. Default is "true".
 </tr>
 <tr>
-<td>IS_BSP_COMPLIANT</td>
-<td>isBSPCompliant</td>
-<td>Whether or not to ensure compliance with the BSP 1.1 spec. Default is
-"true".</td>
+ * IS_BSP_COMPLIANT
+ * isBSPCompliant
+ * Whether or not to ensure compliance with the BSP 1.1 spec. Default is
+"true".
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> ADD_INCLUSIVE_PREFIXES</td>
-<td>addInclusivePrefixes</td>
-<td>Whether to add an InclusiveNamespaces PrefixList as a
+ * <b>WSS4J 2.0.0</b> ADD_INCLUSIVE_PREFIXES
+ * addInclusivePrefixes
+ * Whether to add an InclusiveNamespaces PrefixList as a
 CanonicalizationMethod child when generating Signatures using
-WSConstants.C14N_EXCL_OMIT_COMMENTS. Default is "true".</td>
+WSConstants.C14N_EXCL_OMIT_COMMENTS. Default is "true".
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> ADD_USERNAMETOKEN_NONCE</td>
-<td>addUsernameTokenNonce</td>
-<td>Whether to add a Nonce Element to a UsernameToken (for plaintext). Default
-is "false"</td>
+ * <b>WSS4J 2.0.0</b> ADD_USERNAMETOKEN_NONCE
+ * addUsernameTokenNonce
+ * Whether to add a Nonce Element to a UsernameToken (for plaintext). Default
+is "false"
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> ADD_USERNAMETOKEN_CREATED</td>
-<td>addUsernameTokenCreated</td>
-<td>Whether to add a Created Element to a UsernameToken (for plaintext).
-Default is "false"</td>
+ * <b>WSS4J 2.0.0</b> ADD_USERNAMETOKEN_CREATED
+ * addUsernameTokenCreated
+ * Whether to add a Created Element to a UsernameToken (for plaintext).
+Default is "false"
 </tr>
 <tr>
-<td>HANDLE_CUSTOM_PASSWORD_TYPES</td>
-<td>handleCustomPasswordTypes</td>
-<td>Whether to allow non-standard password types in a UsernameToken. Default
-is "false".</td>
+ * HANDLE_CUSTOM_PASSWORD_TYPES
+ * handleCustomPasswordTypes
+ * Whether to allow non-standard password types in a UsernameToken. Default
+is "false".
 </tr>
 <tr>
-<td><b>WSS4J 1.6.x only</b> PASSWORD_TYPE_STRICT</td>
-<td>passwordTypeStrict</td>
-<td>Whether to enable strict Username Token password type handling. Default is
-"false".</td>
+ * <b>WSS4J 1.6.x only</b> PASSWORD_TYPE_STRICT
+ * passwordTypeStrict
+ * Whether to enable strict Username Token password type handling. Default is
+"false".
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> ALLOW_USERNAMETOKEN_NOPASSWORD</td>
-<td>allowUsernameTokenNoPassword</td>
-<td>Whether a UsernameToken with no password element is allowed. Default is
-"false".</td>
+ * <b>WSS4J 2.0.0</b> ALLOW_USERNAMETOKEN_NOPASSWORD
+ * allowUsernameTokenNoPassword
+ * Whether a UsernameToken with no password element is allowed. Default is
+"false".
 </tr>
 <tr>
-<td>REQUIRE_SIGNED_ENCRYPTED_DATA_ELEMENTS</td>
-<td>requireSignedEncryptedDataElements</td>
-<td>Whether the engine needs to enforce EncryptedData elements are in a signed
-subtree of the document. Default is "false".</td>
+ * REQUIRE_SIGNED_ENCRYPTED_DATA_ELEMENTS
+ * requireSignedEncryptedDataElements
+ * Whether the engine needs to enforce EncryptedData elements are in a signed
+subtree of the document. Default is "false".
 </tr>
 <tr>
-<td><b>WSS4J 1.6.x only</b> USE_DERIVED_KEY</td>
-<td>useDerivedKey</td>
-<td>Whether to use the standard UsernameToken Key Derivation algorithm.
-Default is "true".</td>
+ * <b>WSS4J 1.6.x only</b> USE_DERIVED_KEY
+ * useDerivedKey
+ * Whether to use the standard UsernameToken Key Derivation algorithm.
+Default is "true".
 </tr>
 <tr>
-<td>ALLOW_NAMESPACE_QUALIFIED_PASSWORD_TYPES</td>
-<td>allowNamespaceQualifiedPasswordTypes</td>
-<td>Whether (wsse) namespace qualified password types are accepted when
-processing UsernameTokens. Default is "false".</td>
+ * ALLOW_NAMESPACE_QUALIFIED_PASSWORD_TYPES
+ * allowNamespaceQualifiedPasswordTypes
+ * Whether (wsse) namespace qualified password types are accepted when
+processing UsernameTokens. Default is "false".
 </tr>
 <tr>
-<td>ENABLE_REVOCATION</td>
-<td>enableRevocation</td>
-<td>Whether to enable Certificate Revocation List (CRL) checking when
-verifying trust in a certificate. Default is "false".</td>
+ * ENABLE_REVOCATION
+ * enableRevocation
+ * Whether to enable Certificate Revocation List (CRL) checking when
+verifying trust in a certificate. Default is "false".
 </tr>
 <tr>
-<td>USE_ENCODED_PASSWORDS</td>
-<td>useEncodedPasswords</td>
-<td>Set whether to treat passwords as binary values for Username Tokens.
-Default is "false". DOM code only.</td>
+ * USE_ENCODED_PASSWORDS
+ * useEncodedPasswords
+ * Set whether to treat passwords as binary values for Username Tokens.
+Default is "false". DOM code only.
 </tr>
 <tr>
-<td>USE_SINGLE_CERTIFICATE</td>
-<td>useSingleCertificate</td>
-<td>Whether to use a single certificate or a whole certificate chain to
-construct a BinarySecurityToken. Default is "true".</td>
+ * USE_SINGLE_CERTIFICATE
+ * useSingleCertificate
+ * Whether to use a single certificate or a whole certificate chain to
+construct a BinarySecurityToken. Default is "true".
 </tr>
 <tr>
-<td>USE_DERIVED_KEY_FOR_MAC</td>
-<td>useDerivedKeyForMAC</td>
-<td>Whether to use the Username Token derived key for a MAC. Default is
-"true".</td>
+ * USE_DERIVED_KEY_FOR_MAC
+ * useDerivedKeyForMAC
+ * Whether to use the Username Token derived key for a MAC. Default is
+"true".
 </tr>
 <tr>
-<td>TIMESTAMP_PRECISION</td>
-<td>precisionInMilliseconds</td>
-<td>Set whether outbound timestamps have precision in milliseconds. Default is
-"true".</td>
+ * TIMESTAMP_PRECISION
+ * precisionInMilliseconds
+ * Set whether outbound timestamps have precision in milliseconds. Default is
+"true".
 </tr>
 <tr>
-<td>TIMESTAMP_STRICT</td>
-<td>timestampStrict</td>
-<td>Set whether to enable strict Timestamp handling, i.e. throw an exception if
+ * TIMESTAMP_STRICT
+ * timestampStrict
+ * Set whether to enable strict Timestamp handling, i.e. throw an exception if
 the current receiver time is past the Expires time of the Timestamp. Default
-is "true".</td>
+is "true".
 </tr>
 <tr>
-<td><b>WSS4J 2.0.4/2.1.0</b> REQUIRE_TIMESTAMP_EXPIRES</td>
-<td>requireTimestampExpires</td>
-<td>Set the value of this parameter to true to require that a Timestamp must
-have an "Expires" Element. The default is "false".</td>
+ * <b>WSS4J 2.0.4/2.1.0</b> REQUIRE_TIMESTAMP_EXPIRES
+ * requireTimestampExpires
+ * Set the value of this parameter to true to require that a Timestamp must
+have an "Expires" Element. The default is "false".
 </tr>
 <tr>
-<td>ENC_SYM_ENC_KEY</td>
-<td>encryptSymmetricEncryptionKey</td>
-<td>Set whether to encrypt the symmetric encryption key or not. Default is
-"true".</td>
+ * ENC_SYM_ENC_KEY
+ * encryptSymmetricEncryptionKey
+ * Set whether to encrypt the symmetric encryption key or not. Default is
+"true".
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> ALLOW_RSA15_KEY_TRANSPORT_ALGORITHM</td>
-<td>allowRSA15KeyTransportAlgorithm</td>
-<td>Whether to allow the RSA v1.5 Key Transport Algorithm or not. Default is
-"false".</td>
+ * <b>WSS4J 2.0.0</b> ALLOW_RSA15_KEY_TRANSPORT_ALGORITHM
+ * allowRSA15KeyTransportAlgorithm
+ * Whether to allow the RSA v1.5 Key Transport Algorithm or not. Default is
+"false".
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> VALIDATE_SAML_SUBJECT_CONFIRMATION</td>
-<td>validateSamlSubjectConfirmation</td>
-<td>Whether to validate the SubjectConfirmation requirements of a received
-SAML Token (sender-vouches or holder-of-key). Default is "true".</td>
+ * <b>WSS4J 2.0.0</b> VALIDATE_SAML_SUBJECT_CONFIRMATION
+ * validateSamlSubjectConfirmation
+ * Whether to validate the SubjectConfirmation requirements of a received
+SAML Token (sender-vouches or holder-of-key). Default is "true".
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> INCLUDE_SIGNATURE_TOKEN</td>
-<td>includeSignatureToken</td>
-<td>Whether to include the Signature Token in the security header as well or
-not (for IssuerSerial, Thumbprint, SKI cases). Default is "false"</td>
+ * <b>WSS4J 2.0.0</b> INCLUDE_SIGNATURE_TOKEN
+ * includeSignatureToken
+ * Whether to include the Signature Token in the security header as well or
+not (for IssuerSerial, Thumbprint, SKI cases). Default is "false"
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> INCLUDE_ENCRYPTION_TOKEN</td>
-<td>includeEncryptionToken</td>
-<td>Whether to include the Encryption Token in the security header as well or
-not (for IssuerSerial, Thumbprint, SKI cases). Default is "false"</td>
+ * <b>WSS4J 2.0.0</b> INCLUDE_ENCRYPTION_TOKEN
+ * includeEncryptionToken
+ * Whether to include the Encryption Token in the security header as well or
+not (for IssuerSerial, Thumbprint, SKI cases). Default is "false"
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> USE_2005_12_NAMESPACE</td>
-<td>use200512Namespace</td>
-<td>Whether to use the 2005/12 namespace for SecureConveration + DerivedKeys,
-or the older namespace. The default is "true"</td>
+ * <b>WSS4J 2.0.0</b> USE_2005_12_NAMESPACE
+ * use200512Namespace
+ * Whether to use the 2005/12 namespace for SecureConveration + DerivedKeys,
+or the older namespace. The default is "true"
 </tr>
 <tr>
-<td><b>WSS4J 2.1.2/2.0.5</b> GET_SECRET_KEY_FROM_CALLBACK_HANDLER</td>
-<td>getSecretKeyFromCallbackHandler</td>
-<td>Whether to get a secret key from a CallbackHandler or not for encryption
+ * <b>WSS4J 2.1.2/2.0.5</b> GET_SECRET_KEY_FROM_CALLBACK_HANDLER
+ * getSecretKeyFromCallbackHandler
+ * Whether to get a secret key from a CallbackHandler or not for encryption
 only. The default is false. If set to true WSS4J attempts to get the secret
 key from the CallbackHandler instead of generating a random key internally.
-</td>
+
 </tr>
 <tr>
-<td><b>WSS4J 2.1.2/2.0.5</b> STORE_BYTES_IN_ATTACHMENT</td>
-<td>storeBytesInAttachment</td>
-<td>Whether to store bytes (CipherData or BinarySecurityToken) in an
+ * <b>WSS4J 2.1.2/2.0.5</b> STORE_BYTES_IN_ATTACHMENT
+ * storeBytesInAttachment
+ * Whether to store bytes (CipherData or BinarySecurityToken) in an
 attachment. The default is false, meaning that bytes are BASE-64 encoded and
 "inlined" in the message. Setting this to true is more efficient, as it means
 that the BASE-64 encoding step can be skipped. For this to work, a
 CallbackHandler must be set on RequestData that can handle attachments.
-</td>
+
 </tr>
 <tr>
-<td><b>WSS4J 2.1.2/2.0.5</b> EXPAND_XOP_INCLUDE_FOR_SIGNATURE</td>
-<td>expandXOPIncludeForSignature</td>
-<td>(Deprecated in 2.2.0). Whether to expand xop:Include Elements encountered when verifying a
+ * <b>WSS4J 2.1.2/2.0.5</b> EXPAND_XOP_INCLUDE_FOR_SIGNATURE
+ * expandXOPIncludeForSignature
+ * (Deprecated in 2.2.0). Whether to expand xop:Include Elements encountered when verifying a
 Signature. The default is true, meaning that the relevant attachment bytes are
 BASE-64 encoded and inserted into the Element. This ensures that the actual
 bytes are signed, and not just the reference.
-</td>
+
 </tr>
 <tr>
-<td><b>WSS4J 2.2.0</b> EXPAND_XOP_INCLUDE</td>
-<td>expandXOPInclude</td>
-<td>
+ * <b>WSS4J 2.2.0</b> EXPAND_XOP_INCLUDE
+ * expandXOPInclude
+ * 
 Whether to search for and expand xop:Include Elements for encryption and
 signature (on the outbound side) or for signature verification (on the inbound
 side). The default is false on the outbound side and true on the inbound side.
 What this means on the inbound side, is that the relevant attachment bytes are
 BASE-64 encoded and inserted into the Element. This ensures that the actual
 bytes are signed, and not just the reference.
-</td>
+
 </tr>
 </table>
 <p>
@@ -575,190 +468,190 @@ parameter are as follows:
 <th>Tag meaning</th>
 </tr>
 <tr>
-<td>PASSWORD_TYPE</td>
-<td>passwordType</td>
-<td>The encoding of the password for a Username Token. The default is
-WSConstants.PW_DIGEST.</td>
+ * PASSWORD_TYPE
+ * passwordType
+ * The encoding of the password for a Username Token. The default is
+WSConstants.PW_DIGEST.
 </tr>
 <tr>
-<td><b>WSS4J 1.6.x only</b> ENC_KEY_NAME</td>
-<td>embeddedKeyName</td>
-<td>The text of the key name to be sent in the KeyInfo for encryption</td>
+ * <b>WSS4J 1.6.x only</b> ENC_KEY_NAME
+ * embeddedKeyName
+ * The text of the key name to be sent in the KeyInfo for encryption
 </tr>
 <tr>
-<td><b>WSS4J 1.6.x only</b> ADD_UT_ELEMENTS</td>
-<td>addUTElements</td>
-<td>Additional elements to add to a Username Token, i.e. "nonce" and "created".
-</td>
+ * <b>WSS4J 1.6.x only</b> ADD_UT_ELEMENTS
+ * addUTElements
+ * Additional elements to add to a Username Token, i.e. "nonce" and "created".
+
 </tr>
 <tr>
-<td>SIG_KEY_ID</td>
-<td>signatureKeyIdentifier</td>
-<td>The key identifier type to use for signature. The default is "IssuerSerial".</td>
+ * SIG_KEY_ID
+ * signatureKeyIdentifier
+ * The key identifier type to use for signature. The default is "IssuerSerial".
 </tr>
 <tr>
-<td>SIG_ALGO</td>
-<td>signatureAlgorithm</td>
-<td>The signature algorithm to use. The default is set by the data in the
+ * SIG_ALGO
+ * signatureAlgorithm
+ * The signature algorithm to use. The default is set by the data in the
 certificate.
-</td>
+
 </tr>
 <tr>
-<td>SIG_DIGEST_ALGO</td>
-<td>signatureDigestAlgorithm</td>
-<td>The signature digest algorithm to use. The default is SHA-1.</td>
+ * SIG_DIGEST_ALGO
+ * signatureDigestAlgorithm
+ * The signature digest algorithm to use. The default is SHA-1.
 </tr>
 <tr>
-<td>SIG_C14N_ALGO</td>
-<td>signatureC14nAlgorithm</td>
-<td>Defines which signature c14n (canonicalization) algorithm to use. The
-default is: "http://www.w3.org/2001/10/xml-exc-c14n#".</td>
+ * SIG_C14N_ALGO
+ * signatureC14nAlgorithm
+ * Defines which signature c14n (canonicalization) algorithm to use. The
+default is: "http://www.w3.org/2001/10/xml-exc-c14n#".
 </tr>
 <tr>
-<td><b>WSS4J 1.6.x only</b> WSE_SECRET_KEY_LENGTH</td>
-<td>wseSecretKeyLength</td>
-<td>The length of the secret (derived) key to use for the WSE UT_SIGN
-functionality.</td>
+ * <b>WSS4J 1.6.x only</b> WSE_SECRET_KEY_LENGTH
+ * wseSecretKeyLength
+ * The length of the secret (derived) key to use for the WSE UT_SIGN
+functionality.
 </tr>
 <tr>
-<td>SIGNATURE_PARTS</td>
-<td>signatureParts</td>
-<td>Parameter to define which parts of the request shall be signed. The SOAP
-body is signed by default.</td>
+ * SIGNATURE_PARTS
+ * signatureParts
+ * Parameter to define which parts of the request shall be signed. The SOAP
+body is signed by default.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> OPTIONAL_SIGNATURE_PARTS</td>
-<td>optionalSignatureParts</td>
-<td>Parameter to define which parts of the request shall be signed, if they
-exist in the request.</td>
+ * <b>WSS4J 2.0.0</b> OPTIONAL_SIGNATURE_PARTS
+ * optionalSignatureParts
+ * Parameter to define which parts of the request shall be signed, if they
+exist in the request.
 </tr>
 <tr>
-<td>DERIVED_KEY_ITERATIONS</td>
-<td>derivedKeyIterations</td>
-<td>The number of iterations to use when deriving a key from a Username Token.
-The default is 1000.</td>
+ * DERIVED_KEY_ITERATIONS
+ * derivedKeyIterations
+ * The number of iterations to use when deriving a key from a Username Token.
+The default is 1000.
 </tr>
 <tr>
-<td>ENC_KEY_ID</td>
-<td>encryptionKeyIdentifier</td>
-<td>The key identifier type to use for encryption. The default is
-"IssuerSerial".</td>
+ * ENC_KEY_ID
+ * encryptionKeyIdentifier
+ * The key identifier type to use for encryption. The default is
+"IssuerSerial".
 </tr>
 <tr>
-<td>ENC_SYM_ALGO</td>
-<td>encryptionSymAlgorithm</td>
-<td>The symmetric encryption algorithm to use. The default is AES-128.</td>
+ * ENC_SYM_ALGO
+ * encryptionSymAlgorithm
+ * The symmetric encryption algorithm to use. The default is AES-128.
 </tr>
 <tr>
-<td>ENC_KEY_TRANSPORT</td>
-<td>encryptionKeyTransportAlgorithm</td>
-<td>The algorithm to use to encrypt the generated symmetric key. The default is RSA-OAEP.</td>
+ * ENC_KEY_TRANSPORT
+ * encryptionKeyTransportAlgorithm
+ * The algorithm to use to encrypt the generated symmetric key. The default is RSA-OAEP.
 </tr>
 <tr>
-<td>ENC_DIGEST_ALGO</td>
-<td>encryptionDigestAlgorithm</td>
-<td>The encryption digest algorithm to use with the RSA-OAEP key transport
-algorithm. The default is SHA-1.</td>
+ * ENC_DIGEST_ALGO
+ * encryptionDigestAlgorithm
+ * The encryption digest algorithm to use with the RSA-OAEP key transport
+algorithm. The default is SHA-1.
 </tr>
 <tr>
-<td>ENCRYPTION_PARTS</td>
-<td>encryptionParts</td>
-<td>Parameter to define which parts of the request shall be encrypted. The
-SOAP body is encrypted in "Content" mode by default.</td>
+ * ENCRYPTION_PARTS
+ * encryptionParts
+ * Parameter to define which parts of the request shall be encrypted. The
+SOAP body is encrypted in "Content" mode by default.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> OPTIONAL_ENCRYPTION_PARTS</td>
-<td>optionalEncryptionParts</td>
-<td>Parameter to define which parts of the request shall be encrypted, if they
-exist in the request.</td>
+ * <b>WSS4J 2.0.0</b> OPTIONAL_ENCRYPTION_PARTS
+ * optionalEncryptionParts
+ * Parameter to define which parts of the request shall be encrypted, if they
+exist in the request.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> ENC_MGF_ALGO</td>
-<td>encryptionMGFAlgorithm</td>
-<td>Defines which encryption mgf algorithm to use with the RSA OAEP Key
-Transport algorithm for encryption. The default is mgfsha1.</td>
+ * <b>WSS4J 2.0.0</b> ENC_MGF_ALGO
+ * encryptionMGFAlgorithm
+ * Defines which encryption mgf algorithm to use with the RSA OAEP Key
+Transport algorithm for encryption. The default is mgfsha1.
 </tr>
 <tr>
-<td>TTL_TIMESTAMP</td>
-<td>timeToLive</td>
-<td>The time difference between creation and expiry time in seconds in the WSS
-Timestamp. The default is "300".</td>
+ * TTL_TIMESTAMP
+ * timeToLive
+ * The time difference between creation and expiry time in seconds in the WSS
+Timestamp. The default is "300".
 </tr>
 <tr>
-<td>TTL_FUTURE_TIMESTAMP</td>
-<td>futureTimeToLive</td>
-<td>The time in seconds in the future within which the Created time of an
-incoming Timestamp is valid. The default is "60".</td>
+ * TTL_FUTURE_TIMESTAMP
+ * futureTimeToLive
+ * The time in seconds in the future within which the Created time of an
+incoming Timestamp is valid. The default is "60".
 </tr>
 <tr>
-<td>TTL_USERNAMETOKEN</td>
-<td>utTimeToLive</td>
-<td>The time difference between creation and expiry time in seconds in the WSS
-UsernameToken created element. The default is "300".</td>
+ * TTL_USERNAMETOKEN
+ * utTimeToLive
+ * The time difference between creation and expiry time in seconds in the WSS
+UsernameToken created element. The default is "300".
 </tr>
 <tr>
-<td>TTL_FUTURE_USERNAMETOKEN</td>
-<td>utFutureTimeToLive</td>
-<td>The time in seconds in the future within which the Created time of an
-incoming UsernameToken is valid. The default is "60".</td>
+ * TTL_FUTURE_USERNAMETOKEN
+ * utFutureTimeToLive
+ * The time in seconds in the future within which the Created time of an
+incoming UsernameToken is valid. The default is "60".
 </tr>
 <tr>
-<td>SIG_SUBJECT_CERT_CONSTRAINTS</td>
-<td>sigSubjectCertConstraints</td>
-<td>A comma separated String of regular expressions which will be applied to
+ * SIG_SUBJECT_CERT_CONSTRAINTS
+ * sigSubjectCertConstraints
+ * A comma separated String of regular expressions which will be applied to
 the subject DN of the certificate used for signature validation, after trust
-verification of the certificate chain associated with the certificate. </td>
+verification of the certificate chain associated with the certificate. 
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> VALIDATOR_MAP</td>
-<td>validatorMap</td>
-<td>A map of QName, Object (Validator) instances to be used to validate
-tokens identified by their QName.</td>
+ * <b>WSS4J 2.0.0</b> VALIDATOR_MAP
+ * validatorMap
+ * A map of QName, Object (Validator) instances to be used to validate
+tokens identified by their QName.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> NONCE_CACHE_INSTANCE</td>
-<td>nonceCacheInstance</td>
-<td>A ReplayCache instance used to cache UsernameToken nonces. The default
-instance that is used is the EHCacheReplayCache.</td>
+ * <b>WSS4J 2.0.0</b> NONCE_CACHE_INSTANCE
+ * nonceCacheInstance
+ * A ReplayCache instance used to cache UsernameToken nonces. The default
+instance that is used is the EHCacheReplayCache.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> TIMESTAMP_CACHE_INSTANCE</td>
-<td>timestampCacheInstance</td>
-<td>A ReplayCache instance used to cache Timestamp Created Strings. The default
-instance that is used is the EHCacheReplayCache.</td>
+ * <b>WSS4J 2.0.0</b> TIMESTAMP_CACHE_INSTANCE
+ * timestampCacheInstance
+ * A ReplayCache instance used to cache Timestamp Created Strings. The default
+instance that is used is the EHCacheReplayCache.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> SAML_ONE_TIME_USE_CACHE_INSTANCE</td>
-<td>samlOneTimeUseCacheInstance</td>
-<td>A ReplayCache instance used to cache SAML2 Token Identifier Strings (if
+ * <b>WSS4J 2.0.0</b> SAML_ONE_TIME_USE_CACHE_INSTANCE
+ * samlOneTimeUseCacheInstance
+ * A ReplayCache instance used to cache SAML2 Token Identifier Strings (if
 the token contains a OneTimeUse Condition). The default instance that is used
-is the EHCacheReplayCache.</td>
+is the EHCacheReplayCache.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> PASSWORD_ENCRYPTOR_INSTANCE</td>
-<td>passwordEncryptorInstance</td>
-<td>A PasswordEncryptor instance used to decrypt encrypted passwords in Crypto
-properties files. The default is the JasyptPasswordEncryptor.</td>
+ * <b>WSS4J 2.0.0</b> PASSWORD_ENCRYPTOR_INSTANCE
+ * passwordEncryptorInstance
+ * A PasswordEncryptor instance used to decrypt encrypted passwords in Crypto
+properties files. The default is the JasyptPasswordEncryptor.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> DERIVED_TOKEN_REFERENCE</td>
-<td>derivedTokenReference</td>
-<td>This controls how deriving tokens are referenced.</td>
+ * <b>WSS4J 2.0.0</b> DERIVED_TOKEN_REFERENCE
+ * derivedTokenReference
+ * This controls how deriving tokens are referenced.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> DERIVED_TOKEN_KEY_ID</td>
-<td>derivedTokenKeyIdentifier</td>
-<td>This controls the key identifier of Derived Tokens.</td>
+ * <b>WSS4J 2.0.0</b> DERIVED_TOKEN_KEY_ID
+ * derivedTokenKeyIdentifier
+ * This controls the key identifier of Derived Tokens.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> DERIVED_SIGNATURE_KEY_LENGTH</td>
-<td>derivedSignatureKeyLength</td>
-<td>The length to use (in bytes) when deriving a key for Signature.</td>
+ * <b>WSS4J 2.0.0</b> DERIVED_SIGNATURE_KEY_LENGTH
+ * derivedSignatureKeyLength
+ * The length to use (in bytes) when deriving a key for Signature.
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> DERIVED_ENCRYPTION_KEY_LENGTH</td>
-<td>derivedEncryptionKeyLength</td>
-<td>The length to use (in bytes) when deriving a key for Encryption.</td>
+ * <b>WSS4J 2.0.0</b> DERIVED_ENCRYPTION_KEY_LENGTH
+ * derivedEncryptionKeyLength
+ * The length to use (in bytes) when deriving a key for Encryption.
 </tr>
 </table>
 <p>
@@ -771,31 +664,31 @@ with examples, see this blog <a href="http://coheigea.blogspot.com/2013/03/signa
 <th>Value</th>
 </tr>
 <tr>
-<td>DirectReference</td>
+ * DirectReference
 </tr>
 <tr>
-<td>IssuerSerial</td>
+ * IssuerSerial
 </tr>
 <tr>
-<td>X509KeyIdentifier</td>
+ * X509KeyIdentifier
 </tr>
 <tr>
-<td>SKIKeyIdentifier</td>
+ * SKIKeyIdentifier
 </tr>
 <tr>
-<td>EmbeddedKeyName</td>
+ * EmbeddedKeyName
 </tr>
 <tr>
-<td>Thumbprint</td>
+ * Thumbprint
 </tr>
 <tr>
-<td>EncryptedKeySHA1</td>
+ * EncryptedKeySHA1
 </tr>
 <tr>
-<td>KeyValue</td>
+ * KeyValue
 </tr>
 <tr>
-<td><b>WSS4J 2.0.0</b> KerberosSHA1</td>
+ * <b>WSS4J 2.0.0</b> KerberosSHA1
 </tr>
 </table>
 </subsection>
